# Boxes

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  jars.toml
.github/workflows/: rust.yml
src/: cli.rs  config.rs  config_cli.rs  error.rs  main.rs  utils.rs
src/cli/: config_cli.rs  constructor.rs  executor.rs  generator.rs  mod.rs
src/minecraft/: jars.rs  mod.rs  server.rs  server_manipulator.rs
src/tests/: mod.rs
src/themes/: mod.rs  theme.rs
