[package]
name = "boxes"
version = "0.1.4"
edition = "2021"
authors = ["Azuyamat"]
description = "Quick and easy CLI to create and manage Minecraft servers"
license-file = "LICENSE"
repository = "https://github.com/Azuyamat/boxes"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.50"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
indicatif = "0.17.7"
blocking = "1.5.1"
confy = "0.5.1"
clap = { version = "4.4.11", features = ["derive"] }
inquire = "0.6.2"